# Dissertation-ppo

./: .gitignore  README.md  aquacrop_model.py  evaluate.py  ppo.py  ppo2.py  pyproject.toml  train.py  train.sh
aquacropgymnasium/: env.py
eval_output/: ppo_timesteps_results.csv
extras/: main.py  train2.py
extras/eval_output/: comparison_results.csv
tmp/ppo/: actor_torch_ppo  critic_torch_ppo
train_output/: ppo_model_1000000_vecnormalize.pkl  ppo_model_2000000_vecnormalize.pkl  ppo_model_500000_vecnormalize.pkl
wandb/: latest-run
wandb/run-20250514_164631-2yc6glm8/: run-2yc6glm8.wandb
wandb/run-20250514_165424-kb0tzaz4/: run-kb0tzaz4.wandb
wandb/run-20250514_170157-jlg2bxin/: run-jlg2bxin.wandb
wandb/run-20250514_170730-r9oxi7fc/: run-r9oxi7fc.wandb
wandb/run-20250514_172134-po66qdju/: run-po66qdju.wandb
wandb/run-20250514_173134-tquvlse2/: run-tquvlse2.wandb
wandb/run-20250515_150312-t0w87ibm/: run-t0w87ibm.wandb
wandb/run-20250515_150859-jezq7rgv/: run-jezq7rgv.wandb
wandb/run-20250515_151201-pcr7jsvw/: run-pcr7jsvw.wandb
wandb/run-20250515_151748-i0r3fv8z/: run-i0r3fv8z.wandb
wandb/run-20250515_152156-kxrjya87/: run-kxrjya87.wandb
wandb/run-20250515_152304-6ogt6mfp/: run-6ogt6mfp.wandb
wandb/run-20250515_153558-cbk4o9hz/: run-cbk4o9hz.wandb
wandb/run-20250517_205529-1kw0mq15/: run-1kw0mq15.wandb
wandb/run-20250517_205645-a3ecddgr/: run-a3ecddgr.wandb
wandb/run-20250517_210033-yl3o8vqa/: run-yl3o8vqa.wandb
wandb/run-20250517_210216-dzb3uz0h/: run-dzb3uz0h.wandb
wandb/run-20250517_210257-ig133i7p/: run-ig133i7p.wandb
(+62 files in other folders)
