[project]
name = "agent"
version = "0.1.0"
description = "ppo agent for irigation"
authors = [
    {name = "Jintsp",email = "jint_pongchababnapa@yahoo.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "stable-baselines3[extra] (>=2.6.0,<3.0.0)",
    "aquacrop (>=3.0.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
